# semi-persistent

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  deny.toml  session-2026-05-20.json  session-2026-05-29.json
abstract-domains/: .gitignore  .verus-version  Cargo.toml  README.md  log  verify-all.sh
abstract-domains/doc/: design.md  interval-soundness.md  proof-status.md  unum-design.md
abstract-domains/scripts/: deep_trace.out.txt  deep_trace.py  invariant.out.txt  invariant.py  simulate.out.txt  simulate.py  unum_brute.py  unum_carry_w.py  unum_invariant.py
abstract-domains/src/: anum.rs  bools.rs  chopped.rs  demo.rs  div.rs  domains.rs  exec_tnum.rs  lib.rs  main.rs  nats.rs  tbit.rs  tnum.rs  unum.rs
abstract-domains/tests/: fuzz.rs
containers/: Cargo.toml
containers/benches/: bplus_bench.rs
containers/doc/design/: 00-table-of-contents.md  01-dense-ids-and-tagged.md  02-semi-persistent-vectors.md  03-append-only-vec.md  04-map.md  05-list-arena.md  06-sparse-set.md  07-bplus-tree.md  08-bplus-benchmark-analysis.md
containers/src/: append_only_vec.rs  bitset.rs  bplus.rs  dense_id.rs  diff_store.rs  id.rs  lib.rs  list.rs  map.rs  sorted_cursor.rs  sparse_set.rs  tagged.rs  token.rs  vec.rs
containers/tests/: append_only_vec_proptest.rs  bounded_pop_test.rs  bplus64_proptest.rs  bplus_proptest.rs  list_arena_proptest.rs  map_proptest.rs  sparse_set_proptest.rs  vec_proptest.rs
egraph/: Cargo.toml
egraph/benches/: index_bench.rs  iter_bench.rs  lca_bench.rs  leapfrog_bench.rs  seek_microbench.rs  split_bench.rs  vec_bench.rs
egraph/doc/: au-example-contract-pair.md  au-example-saturation.md
egraph/doc/design/: 00-table-of-contents.md  01-node-storage.md  02-classes-and-union-find.md  03-hash-consing-caches.md  04-canonization.md  05-egraph.md  06-index.md  07-leapfrog.md  08-query-compilation.md  09-pattern-matching.md  10-surface-language.md  11-sortcheck-and-resolution.md  12-rule-application.md  13-literal-model.md  14-soundness.md  15-proof-logging.md  16-extraction.md  17-interpreter.md  18-semi-naive-evaluation.md  19-anti-unification.md  A0-overview.md  A1-language-guide.md  A2-developer-guide.md  A3-future-work.md  ac-algebraic-properties.md  ac-completion-spec.md  ac-congruence-completeness.md
egraph/doc/future/: ac-completion-performance.md  ac-completion-review-debt.md  ac-congruence-completeness-plan.md  ac-congruence-completeness-tasks.md  alpha-equivalence.md  anti-unification-mcgs.md  anti-unification-plan.md  au-associative-operators.md  datalog-integration.md  multi-ac-aci-completion-plan.md  multi-ac-aci-tasks.md  optimal-term-extraction.md  semi-naive-deferred-work.md  stratified-negation.md
egraph/examples/: au_basic.egg  au_contract_pair.egg  au_deep_chain.egg  au_demo.rs  au_greedy_intersection.egg  au_implications.egg  au_saturation.egg  au_saturation_partial.egg  basic.egg  eclasses_demo.rs  machine.egg  strings.egg  viz_demo.rs
egraph/proptest-regressions/: egraph.txt  saturate.txt
egraph/src/: ac_complete.rs  ac_invariants.rs  ac_multiset.rs  apply.rs  ast.rs  caches.rs  canon.rs  cc.rs  classes.rs  compile.rs  config.rs  director.rs  egraph.rs  egraph_proof_test.rs  ematch.rs  extract.rs  id.rs  index.rs  interpret.rs  lca.rs  leapfrog.rs  lib.rs  lit_model.rs  literal.rs  main.rs  model.rs  multiplicity.rs  multiset.rs  node_store.rs  node_types.rs  nodes.rs  parser.rs  registry.rs  resolve.rs  saturate.rs  schedule.rs  sortcheck.rs  surface_ast.rs  test_helpers.rs  typed_routing.rs  (+2 more)
egraph/src/au/: ac_repr.rs  actions.rs  egraph_api.rs  exact.rs  mcgs.rs  mod.rs  pretty.rs  results.rs  reward.rs  session.rs  space.rs  terms.rs  transport.rs
egraph/tests/: ac_completion_gates.rs  ac_matrix.rs  ac_vs_rules.rs  au_adversarial_correctness.rs  au_adversarial_e2e.rs  au_adversarial_props.proptest-regressions  au_adversarial_props.rs  au_adversarial_stress.rs  au_config64.rs  au_conformance.rs  au_convergence_props.rs  au_corpus_runner.rs  au_deep_term_stress.rs  au_id_width.rs  au_intersection_counterexample.rs  au_mcgs_transport_adversarial.rs  au_operator_class_matrix.rs  au_quality_metrics.rs  au_reference_aux_fixtures.rs  au_reference_fixtures.rs  au_semi_persistence.rs  au_transport_props.rs  eclasses_proptest.proptest-regressions  eclasses_proptest.rs  egg_tests.rs  parser_patterns.rs  parser_rhs.rs  pipeline_diagnostic.rs  semi_naive_delta.rs  semi_naive_interp.rs  uselist_proptest.rs
egraph/tests/au/: anonymize_cases.py
egraph/tests/egg/: ac_complete_cancel.egg  ac_complete_containment.egg  ac_complete_multi_mset.egg  ac_complete_nested_match.egg  ac_complete_superposition.egg  ac_flatten_build.egg  ac_inline_check_after_run.egg  ac_mult_constraint.egg  ac_mult_exact.egg  ac_mult_nonlinear.egg  ac_two_same_op_atoms.egg  aci_complete_multi.egg  aci_complete_superposition.egg  aci_rule_axiom_cp.egg  alg_tags_composable_ac.egg  alg_tags_reject_cancellative_assoc_only.egg  bignum_all_ops.egg  (+73 more)
semi-persistent/: Cargo.toml
semi-persistent/src/: lib.rs
traversals/: Cargo.toml  PLAN.md  README.md  TUTORIAL.md
traversals/benches/: fold_bench.rs
traversals/derive/: Cargo.toml
traversals/src/: lib.rs
traversals/tests/: adversarial.rs  family.rs  family_demo.rs  partition.rs  partition_testorial.rs  stress.rs  testorial.rs  variadic_family.rs
(+90 files in other folders)
