[package]
name = "semi-persistent-traversals"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Arena-based recursion schemes: stack-safe folds, unfolds, transforms, and zippers"
repository = "https://github.com/yaspar-org/semi-persistent"

[dependencies]
semi-persistent-traversals-derive = { path = "derive", version = "0.1.0" }
winnow.workspace = true
rustc-hash = "2"
smallvec = "1"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "fold_bench"
harness = false
