[package]
name = "semi-persistent-traversals-derive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Derive macros for semi-persistent-traversals"
repository = "https://github.com/yaspar-org/semi-persistent"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
